# LightGBM_from_C_plus_plus

./: README.md
train_LGBM/: CMakeLists.txt  main.cpp  model.txt
train_LGBM/include/: pg_config.h
train_LGBM/lib/: libpq.lib
